	- Update hostname for PROTO_LIMELIGHT: add new hostnames: limelight.com, llnw.net


- Add classification function to 25 unknown protocols
	- Replace PROTO_302_FOUND by PROTO_ZONE_TELECHARGEMENT
	- Replace PROTO_GOSMS by PROTO_JEUXVIDEO
	- Add classification for PROTO_IPSEC by port number: 500 (Ref: nDPI)
	- Add classification for PROTO_OGG by content type after HTTP


## Version 1.6.9.0
- Fixed some protocols based on hostname -> there are 8 protocol based on the hostname that does not exist anymore
- Fixed memory leaks in PROTO_NFS
- Fixed classification of PROTO_MANOLITO
- Fixed classification of PROTO_VNC: classified by port number - 5900, 5901, 5800 - nDPI
- Fixed classification of PROTO_EDONKEY: payload_len = 6 and some specific characters ('server status request') : resource - https://www.symantec.com/connect/articles/identifying-p2p-users-using-traffic-analysis
- Fixed classificaiton of PROTO_USENET: excluded incorrect protocol
- Fixed the classification of PROTO_THUNDER
- Fixed the classification of PROTO_I23V5
- Fixed the classification of PROTO_DIRECTCONNECT
- Fixed the classification of some protocols based on port number
- Fixed the classification of PROTO_SOULSEEK


## Version 1.6.8.0
- Change package name (of .deb file) from mmt-sdk to mmt-dpi
- Fixed classification of PROTO_MSSQL
- Added classification of PROTO_PTP over ETHERNET (Need to do for PROTO_PTP Over UDP)
- Added classification of PROTO_PPP over ETHERNET
- Added classification of PROTO_FC over ETHERNET
- Added classification of PROTO_GTP
- Added classification of PPP over GRE
- Updated all application protocols which based on IP ranges
- Updated all application protocols which based on hostname
- Update with some optimisations in classifying protocol based on hostname and parsing HTTP header value
- Remove some APIs: unused (register_attribute), need to private (mmt_drop_packet,..)
- Add patch to fix the classification of Application protocol base on hostname